{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 28,
  "lineage": "fca96b92-c390-54a0-38e7-10d687e566b7",
  "resources": [
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-cloud",
            "internal_domain_name_suffix": "iznfqf3atisebdcja1i0n1v4bh.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-cloud",
                "primary": true,
                "private_ip_address": "10.1.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/publicIPAddresses/public-ip-cloud",
                "subnet_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/subnets/subnet-cloud"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "00-22-48-A7-F4-10",
            "name": "nic-cloud",
            "private_ip_address": "10.1.0.4",
            "private_ip_addresses": [
              "10.1.0.4"
            ],
            "resource_group_name": "rheem-rg",
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            },
            "virtual_machine_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Compute/virtualMachines/vm-cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_public_ip.public_ip_cloud",
            "module.vnet_cloud.azurerm_subnet.subnet_cloud",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_cloud_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-cloud|/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud",
            "network_interface_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-cloud",
            "network_security_group_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_network_interface.nic_cloud",
            "module.vnet_cloud.azurerm_network_security_group.nsg_cloud",
            "module.vnet_cloud.azurerm_public_ip.public_ip_cloud",
            "module.vnet_cloud.azurerm_subnet.subnet_cloud",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-cloud",
            "location": "southcentralus",
            "name": "nsg-cloud",
            "resource_group_name": "rheem-rg",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/publicIPAddresses/public-ip-cloud",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.65.122.28",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "public-ip-cloud",
            "resource_group_name": "rheem-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/subnets/subnet-cloud",
            "name": "subnet-cloud",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rheem-rg",
            "virtual_network_name": "vnet-cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_cloud_aca",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.2.0/23"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/subnets/subnet-cloud-aca",
            "name": "subnet-cloud-aca",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rheem-rg",
            "virtual_network_name": "vnet-cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_cloud",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "17585a46-9aa0-4024-8c49-06d1a6eebe0f",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud",
            "location": "southcentralus",
            "name": "vnet-cloud",
            "resource_group_name": "rheem-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.1.0.0/23"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/subnets/subnet-cloud",
                "name": "subnet-cloud",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.1.2.0/23"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/subnets/subnet-cloud-aca",
                "name": "subnet-cloud-aca",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-onprem",
            "internal_domain_name_suffix": "dnxw4ntvmgtebhtsvl3wodtn5h.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig-onprem",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/publicIPAddresses/public-ip-onprem",
                "subnet_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "southcentralus",
            "mac_address": "00-0D-3A-76-57-6E",
            "name": "nic-onprem",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rheem-rg",
            "virtual_machine_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Compute/virtualMachines/vm-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_onprem.azurerm_public_ip.public_ip_onprem",
            "module.vnet_onprem.azurerm_subnet.subnet_onprem",
            "module.vnet_onprem.azurerm_virtual_network.vnet_onprem"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "nic_nsg_onprem_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-onprem|/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-onprem",
            "network_interface_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkInterfaces/nic-onprem",
            "network_security_group_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_onprem.azurerm_network_interface.nic_onprem",
            "module.vnet_onprem.azurerm_network_security_group.nsg_onprem",
            "module.vnet_onprem.azurerm_public_ip.public_ip_onprem",
            "module.vnet_onprem.azurerm_subnet.subnet_onprem",
            "module.vnet_onprem.azurerm_virtual_network.vnet_onprem"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-onprem",
            "location": "southcentralus",
            "name": "nsg-onprem",
            "resource_group_name": "rheem-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "sftp",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "631",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "cups",
                "priority": 101,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_onprem_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "cups",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "631",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-onprem/securityRules/cups",
            "name": "cups",
            "network_security_group_name": "nsg-onprem",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "rheem-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_onprem.azurerm_network_security_group.nsg_onprem"
          ]
        },
        {
          "index_key": "sftp",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/networkSecurityGroups/nsg-onprem/securityRules/sftp",
            "name": "sftp",
            "network_security_group_name": "nsg-onprem",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "rheem-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_onprem.azurerm_network_security_group.nsg_onprem"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/publicIPAddresses/public-ip-onprem",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.65.122.43",
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "public-ip-onprem",
            "resource_group_name": "rheem-rg",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem",
            "name": "subnet-onprem",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rheem-rg",
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_onprem.azurerm_virtual_network.vnet_onprem"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_onprem",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "366f6f1b-6175-40a6-9e72-aafb670e6dff",
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem",
            "location": "southcentralus",
            "name": "vnet-onprem",
            "resource_group_name": "rheem-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.0.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem/subnets/subnet-onprem",
                "name": "subnet-onprem",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ],
            "tags": {
              "environment": "dev",
              "owner": "rheem"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_cloud_to_onprem",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud/virtualNetworkPeerings/vnet-peering-cloud-to-onprem",
            "name": "vnet-peering-cloud-to-onprem",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem",
            "resource_group_name": "rheem-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-cloud"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud",
            "module.vnet_onprem.azurerm_virtual_network.vnet_onprem"
          ]
        }
      ]
    },
    {
      "module": "module.vnet_peering",
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "vnet_peering_onprem_to_cloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-onprem/virtualNetworkPeerings/vnet-peering-onprem-to-cloud",
            "name": "vnet-peering-onprem-to-cloud",
            "only_ipv6_peering_enabled": false,
            "peer_complete_virtual_networks_enabled": true,
            "remote_virtual_network_id": "/subscriptions/494116cb-e794-4266-98e5-61c178d62cb4/resourceGroups/rheem-rg/providers/Microsoft.Network/virtualNetworks/vnet-cloud",
            "resource_group_name": "rheem-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "vnet-onprem"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "module.vnet_cloud.azurerm_virtual_network.vnet_cloud",
            "module.vnet_onprem.azurerm_virtual_network.vnet_onprem"
          ]
        }
      ]
    }
  ]
}